# pycrossy

./: .gitignore  DESIGN.md  README.md  main.py  pyproject.toml  requirements.txt  train.py
ai/: __init__.py  base.py  benchmark.py  dashboard.py  env.py  evaluate.py  game_window.py  metrics.py  networks.py  observation.py  replay.py  session.py  swarm.py  trainer.py  tune.py  vec_env.py
ai/algorithms/: __init__.py  ddqn.py  dqn.py  evolutionary.py  neat_algo.py  policy_gradient.py  search_agent.py
assets/: ATTRIBUTION.md  MANIFEST.txt
docs/: AI_AUDIT.md  AI_IMPROVEMENTS.md  AI_NEW_AGENTS.md  ARCHITECTURE.md
pycrossy/: __init__.py  assets.py  audio.py  config.py  engine.py  game.py  gpu.py  layout.py  mathutils.py  menu.py  models.py  obj_loader.py  particles.py  persistence.py  primitives.py  renderer.py  scene.py  settings.py  textures.py  tween.py  ui.py  widgets.py  world.py
pycrossy/entities/: __init__.py  player.py  rows.py
tests/: _helpers.py  conftest.py  test_ai_fixes.py  test_collision.py  test_env.py  test_game_integration.py  test_gpu.py  test_layout.py  test_live_parallel.py  test_menu.py  test_movement.py  test_networks.py  test_new_agents.py  test_rendering.py  test_replay.py  test_saveload.py  test_scoring.py  test_settings.py  test_spawn.py  test_swarm.py
